--- a/public/index.html
+++ b/public/index.html
@@ -92,11 +92,11 @@
   <script>
     const re = React.createElement;
 
-    const domContainer = document.querySelector('#like_button_container');
-    ReactDOM.render(re(LikeButton), domContainer);
+    //const domContainer = document.querySelector('#like_button_container');
+    //ReactDOM.render(re(LikeButton), domContainer);
 
-    // const domContainer2 = document.querySelector("#hello");
-    // ReactDOM.render(re(Hello), domContainer2);
+    const domContainer2 = document.querySelector("#hello");
+    ReactDOM.render(re(HelloComponent), domContainer2);
   </script>
 
 </body>
